@@ -1,3 +1,7 @@
+2002-06-08  Darke <darkepaw@users.sourceforge.net>
+	* usecode/ucxt/src/ucfunc.cc: Removed the 'fix' we needed for
+	strstreams.
+
 2002-06-07  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* ucinternal.cc:  Fixed a couple compile errors if UC debugging
